--- a/micronaut-java11/build.gradle
+++ b/micronaut-java11/build.gradle
@@ -38,24 +38,27 @@ dependencies {
     dynamodb("com.amazonaws:DynamoDBLocal:${dynamoDbLocalVersion}")
 
     /* Micronaut Framework */
-    def micronautVersion = "2.3.2"
+    def micronautVersion = "2.4.0"
     annotationProcessor(platform("io.micronaut:micronaut-bom:${micronautVersion}"))
     annotationProcessor("io.micronaut:micronaut-inject-java")
     implementation(platform("io.micronaut:micronaut-bom:${micronautVersion}"))
     implementation("io.micronaut:micronaut-inject")
     implementation("io.micronaut:micronaut-runtime")
     implementation("javax.annotation:javax.annotation-api")
-    implementation("io.micronaut.aws:micronaut-function-aws-api-proxy")
     implementation("io.micronaut.aws:micronaut-aws-sdk-v2")
+    implementation("io.micronaut.aws:micronaut-function-aws-api-proxy")
+    implementation("io.micronaut.aws:micronaut-function-aws-custom-runtime")
     runtimeOnly("ch.qos.logback:logback-classic")
     testAnnotationProcessor(enforcedPlatform("io.micronaut:micronaut-bom:${micronautVersion}"))
     testAnnotationProcessor("io.micronaut:micronaut-inject-java")
     testImplementation(enforcedPlatform("io.micronaut:micronaut-bom:${micronautVersion}"))
     testImplementation("io.micronaut.test:micronaut-test-junit5")
-    testImplementation("org.junit.jupiter:junit-jupiter:5.8.0-M1")
+    testImplementation("io.micronaut.aws:micronaut-function-aws-test")
 
     /* Testing */
+    def junitVersion = "5.8.0-M1"
     def assertJVersion = "3.19.0"
+    testImplementation("org.junit.jupiter:junit-jupiter:${junitVersion}")
     testImplementation("org.assertj:assertj-core:${assertJVersion}")
 }
 
@@ -74,6 +77,9 @@ test {
     doFirst {
         systemProperty "java.library.path", "build/libs"
     }
+
+    // Required by the AWS API
+    environment "AWS_REGION", "eu-central-1"
 }
 
 shadowJar {
