--- a/plain-rust1_50/Cargo.toml
+++ b/plain-rust1_50/Cargo.toml
@@ -19,6 +19,7 @@ futures = "0.3.9"
 tokio = { version = "1.0.1", features = ["full"] }
 rand = "0.8.1"
 regex = "1"
+chrono = "0.4.19"
 
 [[bin]]
 name = "bootstrap"
