--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,11 @@ target
 .project
 
 # Terraform files
-.terraform
-.terraform.lock.hcl
-terraform.tfstate
-terraform.tfstate.backup
+**/.terraform
+**/.terraform.lock.hcl
+**/.terraform.tfstate.lock.info
+**/terraform.tfstate
+**/terraform.tfstate.backup
 
 # OS
 **/.DS_Store
