--- a/spring_cloud_function-native_image-java11/build.gradle
+++ b/spring_cloud_function-native_image-java11/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id("application")
     id("org.springframework.boot") version("2.4.3")
     id("io.spring.dependency-management") version("1.0.11.RELEASE")
+    id("org.springframework.experimental.aot") version("0.9.0")
     id("com.github.johnrengelman.shadow") version("6.1.0")
     id("com.dorongold.task-tree") version("1.5")
     id("com.github.ben-manes.versions") version("0.38.0")
@@ -19,6 +20,7 @@ repositories {
     mavenCentral()
     jcenter()
     maven { url "http://dynamodb-local.s3-website-us-west-2.amazonaws.com/release" }
+    maven { url 'https://repo.spring.io/release' }
 }
 
 ext {
@@ -99,4 +101,13 @@ shadowJar {
         paths = ['META-INF/spring.factories']
         mergeStrategy = "append"
     }
+}
+
+springAot {
+    removeSpelSupport = true
+}
+
+bootBuildImage {
+    builder = 'paketobuildpacks/builder:tiny'
+    environment = ['BP_NATIVE_IMAGE': 'true']
 }
